[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "ipykernel",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-openai==0.3.1",
    "langchain-experimental==0.3.4",
    "langchainhub==0.1.21",
    "python-dotenv==1.0.1",
    "pydantic==2.10.5",
    "beautifulsoup4==4.12.3",
    "wikipedia==1.4.0",
    "arxiv==2.1.3",
    "stack-data==0.6.3",
    "pandas==2.2.3",
    "tabulate==0.9.0",
    "stackapi>=0.3.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "agent", from = "source"}]
